fix menu mobile top gap and adjust brandign vh

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -47,18 +47,21 @@
             transform: translate3d(0, 0, 0);
         }
     }
-    .menu-nav {
-        height: 50vh;
-        transform: translate3d(-100%, 0, 0); // change X axis
-        font-size: 24px;
-    }
-    .menu-branding {
-        height: 50vh; // los dos hacen 100vh
-        transform: translate3d(100%, 0, 0);
-        .portrait {
-            background: url('../img/portrait_small.jpg');
-            width: 150px;
-            height: 150px;
+    .menu {
+        top: 0px; // no dejes gap en la parte de arriba cuando es < tablet
+        &-nav {
+            height: 50vh;
+            transform: translate3d(-100%, 0, 0); // change X axis
+            font-size: 24px;
+        }
+        &-branding {
+            height: 50vh; // los dos hacen 100vh
+            transform: translate3d(100%, 0, 0);
+            .portrait {
+                background: url('../img/portrait_small.jpg');
+                width: 150px;
+                height: 150px;
+            }
         }
     } //
     // ABOUT MOBILE CSS
@@ -90,10 +93,10 @@
         }
     }
     .menu-branding {
-        height: 30vh;
+        height: 25vh;
     }
     .menu-nav {
-        height: 70vh;
+        height: 75vh;
     }
     .menu-btn {
         top: 0; // la posicion para que quede de nuevo en el top right
